--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -32,5 +32,8 @@ spring:
     defer-datasource-initialization: true
     open-in-view: true
 
+  session:
+    store-type: none
+
 allow:
   host: http://localhost:3000
